<resources>
    <string name="app_name">BlogApp2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="password">Password</string>
    <string name="signin">SignIn</string>
    <string name="not_have_an_accont_sign_up">Not have an Accont? Sign Up</string>
    <string name="valids_text_field">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ áéíóúñÁÉÍÓÚ</string>
    <string name="valids_text_field_plate">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789</string>
    <string name="valids_text_field_brand">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="valids_text_field_email">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@.-_</string>
    <string name="valids_text_field_password">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@#$_-?!;:*.~|•√π÷×¶∆}{=°^¥€¢£©®™✓[]</string>
    <string name="bienvenido">Welcome</string>
</resources>