<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center"
    android:background="@drawable/fondo_login_erp_2"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/bienvenido"
            android:layout_marginBottom="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_layout_turtle_green"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/users"
                android:textColor="@color/white"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:digits="@string/valids_text_field_email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_layout_turtle_green"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/password"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:digits="@string/valids_text_field_email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/background_btn"
            android:text="@string/signin"
            android:textColor="@color/black"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/not_have_an_accont_sign_up"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>